# event-intel-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: .gitignore  README.md  r2_pairs.yaml
benchmarks/gold/: gates_d3.json  thresholds_znc.json  thresholds_znc_v2.json
benchmarks/gold/p1_mongodb_gtc/: measure_cosine_v2.json  measure_enriched.json  measure_llm.json  measure_no_enrich.json  roster.json  sealed_labels.json
benchmarks/gold/p4_hyodol_hcr/: roster.json
benchmarks/gold/p5_snowflake_bdldn/: diagnosis_triage_drop.md  measure_cosine_v2.json  measure_enriched.json  measure_enriched_brave.json  measure_enriched_cn20.json  measure_enriched_rss.json  measure_llm.json  revenue_tiers.json  roster.json  sealed_labels.json
benchmarks/gold/p6_navercloud_aiexpo/: measure_cosine_v2.json  measure_cosine_v2_cn20.json  measure_enriched.json  measure_enriched_cn20.json  measure_enriched_rss.json  measure_llm.json  revenue_tiers.json  roster.json  sealed_labels.json
benchmarks/gold/p7_siemens_hannover/: measure_cosine_v2.json  measure_enriched.json  measure_enriched_cn20.json  measure_enriched_rss.json  measure_homepage.json  measure_homepage_cn50.json  measure_llm.json  measure_llm_fullx.json  revenue_tiers.json  roster.json  sealed_labels.json  triage_diag.json
benchmarks/replay/p_static_demo/: meta.json  responses.json  roster.json  source.synthetic.txt
benchmarks/runs/p1_mongodb_gtc/gtc2026-20260608054914-8515ecbf/: run_result.json
benchmarks/runs/p1_mongodb_gtc/gtc2026-20260608125336-46016d72/: run_result.json
benchmarks/runs/p1_mongodb_gtc/gtc2026-20260611123128-820600cd/: run_result.json
benchmarks/runs/p5_snowflake_bdldn/big_data_ldn_2026-20260611051840-2def51b3/: run_result.json
benchmarks/runs/p5_snowflake_bdldn/big_data_ldn_2026-20260611070536-f0bdab95/: run_result.json
benchmarks/runs/p5_snowflake_bdldn/big_data_ldn_2026-20260611081011-1b72e351/: run_result.json
benchmarks/runs/p5_snowflake_bdldn/big_data_ldn_2026-20260611090641-78c4e9c4/: run_result.json
benchmarks/runs/p5_snowflake_bdldn/big_data_ldn_2026-20260611125128-68d1b8ea/: run_result.json
benchmarks/runs/p6_navercloud_aiexpo/ai_expo_korea_2026-20260611053518-2f7b87f6/: run_result.json
benchmarks/runs/p6_navercloud_aiexpo/ai_expo_korea_2026-20260611071327-97b8aedf/: run_result.json
benchmarks/runs/p6_navercloud_aiexpo/ai_expo_korea_2026-20260611082648-fa8d456e/: run_result.json
benchmarks/runs/p6_navercloud_aiexpo/ai_expo_korea_2026-20260611130914-addc9b04/: run_result.json
benchmarks/runs/p7_siemens_hannover/hannover_messe_2026-20260611060639-6726d80b/: run_result.json
config/: defaults.yaml
docs/: architecture.md  backlog.md  commands.md  lesson-learned.md  notion_db_schemas.md  playbook.md  retry-playbook.md  security-audit.md  status.md
mcpb/: README.md  manifest.json
mcpb/server/: launcher.py
scripts/: r2_smoke.py
src/event_intel/: _env.py  cli.py  errors.py  mcp_server.py  textenc.py  timeutil.py
src/event_intel/acquisition/: __init__.py  acquire.py  analyzer.py  http_status_map.py  probe.py  raw_fetch.py  robots.py  url_safety.py
src/event_intel/cards/: drafter.py  ingest.py  schema.py  schema_snapshot.json  validator.py
src/event_intel/eval/: __init__.py  benchmark.py  blind.py  cost.py  critique_packet.py  critique_panel.py  critique_report.py  harness.py  label_draft.py  label_refine.py  labeling.py  metrics.py  news_capture.py  replay.py  retry_stats.py  roster.py  smoke_batch.py
src/event_intel/events/: enrichment.py  evidence.py  extraction.py  homepage_evidence.py  llm_cache.py  news_body.py  profile_fetch.py  run_summary.py  source_capture.py  tier2.py  triage.py
src/event_intel/events/data/: common_words.txt
src/event_intel/providers/: embedding.py  fetch.py  llm.py  search.py  vectorstore.py
src/event_intel/rag/: retriever.py
src/event_intel/report/: brief_export.py  tier_list_md.py  tier_list_yaml.py
src/event_intel/runtime/: async_job.py  failure_log.py  io_contract.py  job_store.py  llm_ledger.py  models.py  paths.py  preflight.py  tool_policy.py  transport.py  warmup.py
src/event_intel/scoring/: cjk.py  compute.py  dimensions.py  llm_fit.py  rules.py
src/event_intel/sources/: __init__.py  indexer.py  retrieval.py
src/event_intel/storage/: artifact_registry.py  artifacts.py  identifiers.py  migrate.py
src/event_intel/tools/: acquire_exhibitor_source.py  analyze_event_page.py  build_event_tier_list.py  check_runtime.py  draft_capability_cards.py  draft_labels.py  get_job.py  ingest_capability_cards.py  login_chatgpt.py  prepare_models.py  probe_exhibitor_endpoint.py  sync_product_sources.py  validate_capability_cards.py
tests/: conftest.py  test_acquire.py  test_analyzer.py  test_artifact_registry.py  test_artifacts.py  test_async_job.py  test_benchmark_data_hygiene.py  test_cards_drafter.py  test_cards_ingest.py  test_cards_ingest_receipt.py  test_cards_schema.py  test_cards_schema_drift.py  test_cards_tools.py  test_cards_validator.py  test_category_fit_cjk.py  test_chatgpt_oauth_provider.py  test_cli.py  test_cli_benchmark.py  test_critique_packet.py  test_critique_panel.py  test_critique_report.py  test_ddgs_provider.py  test_draft_labels_tool.py  test_embedding_provider.py  test_enrichment.py  test_enrichment_homepage.py  test_entity_gate.py  test_env_loading.py  test_eval_benchmark.py  test_eval_benchmark_metrics.py  test_eval_blind.py  test_eval_label_draft.py  test_eval_label_grade.py  test_eval_label_refine.py  test_eval_labeling.py  test_eval_matrix.py  test_eval_replay.py  test_eval_roster.py  test_event_extraction.py  test_evidence.py  (+53 more)
tests/fixtures/: google_news_rss.xml
tests/fixtures/cards/: sample_cards.yaml  sample_source.md
tests/fixtures/eval/: b2b_x_ai.yaml  b2b_x_general.yaml  b2b_x_mfg.yaml  component_x_ai.yaml  component_x_general.yaml  component_x_mfg.yaml  db_x_ai_gtc.yaml  db_x_general.yaml  db_x_mfg.yaml
tests/fixtures/events/: README.md  large_exhibitor_page.html  sample_exhibitors.csv  sample_exhibitors.html  sample_exhibitors_ko.html
(+18 files in other folders)
