[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-intel-mcp"
version = "0.1.0a0"
description = "Turn exhibitor lists into evidence-backed BD target tier lists via MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "JuniBecky" }]
keywords = ["mcp", "bd", "exhibitor", "rag", "claude"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pypdf>=5.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
event-intel = "event_intel.cli:app"

[project.urls]
Homepage = "https://github.com/JrJuni/event-intel-mcp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"event_intel" = ["prompts/**/*.txt", "cards/schema_snapshot.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude slow integration tests (real model load / subprocess MCP server) by
# default; run them explicitly with `pytest -m slow`.
addopts = "-ra -q -m 'not slow'"
markers = [
    "slow: integration tests that load the real bge-m3 model or spawn the MCP server subprocess",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer requires `typer.Option(...)` as a parameter default — B008 ("function
# call in argument defaults") is a false positive for the idiomatic CLI surface.
"src/event_intel/cli.py" = ["B008"]
