[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-intel-mcp"
version = "0.1.0a0"
description = "Turn exhibitor lists into evidence-backed BD target tier lists via MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "JuniBecky" }]
keywords = ["mcp", "bd", "exhibitor", "rag", "claude"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0,<2.0.0",  # Y2.2: cap the major — streamable-http/auth APIs are 1.x-stable (dev on 1.27)
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "httpx>=0.27",
    "ddgs>=9.14,<10",  # zero-config keyless search default (DuckDuckGo backends); unofficial, version-capped
    "trafilatura>=1.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pypdf>=5.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# Optional CJK morphological tokenizer for category_fit (Phase 18W P2-4).
# Without it, scoring.cjk_tokenizer.mode=morphological falls back to bigram.
# JP/CN are pure-Python (janome/jieba). Korean (kiwipiepy) is a separate `[kr]`
# extra because it is a NATIVE wheel + ~109 MB model (Phase 18X) — keep it off
# the pure-Python path so JP/CN-only users don't pull a native dependency.
cjk = [
    "janome>=0.5",
    "jieba>=0.42",
]
kr = [
    "kiwipiepy>=0.21",
]

[project.scripts]
event-intel = "event_intel.cli:app"

[project.urls]
Homepage = "https://github.com/JrJuni/event-intel-mcp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"event_intel" = ["prompts/**/*.txt", "cards/schema_snapshot.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude slow integration tests (real model load / subprocess MCP server) by
# default; run them explicitly with `pytest -m slow`.
addopts = "-ra -q -m 'not slow'"
markers = [
    "slow: integration tests that load the real bge-m3 model or spawn the MCP server subprocess",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# ANN = type annotations on the public/production surface (Phase 18W P3).
# Only the AUTO-FIXABLE docstring rules are enabled (D208/D209/D413) — full
# docstring coverage (D101/D102/D103…) is intentionally NOT adopted (large churn,
# deferred). ANN401 (explicit Any) is allowed: config/JSON payloads legitimately
# use Any.
select = ["E", "F", "I", "W", "B", "UP", "ANN", "D208", "D209", "D413"]
ignore = ["E501", "ANN401"]

[tool.ruff.lint.per-file-ignores]
# typer requires `typer.Option(...)` as a parameter default — B008 ("function
# call in argument defaults") is a false positive for the idiomatic CLI surface.
"src/event_intel/cli.py" = ["B008"]
# Tests don't need type annotations or docstring formatting — keep the gate on
# production code only (every test fn otherwise needs `-> None`).
"tests/**" = ["ANN", "D208", "D209", "D413"]
